--- a/index.html
+++ b/index.html
@@ -5,17 +5,40 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mangata & Gallo</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+
 </head>
 <body>
     <header>
-        <h1>Mangata & Gallo</h1>
 
         <nav>
-            <ul>
-                <li><a href="#"></li>
-                <li><a href="#"></li>
-                <li><a href="#"></li>
+            <ul class="menu">
+                <li>
+                <a href="#">
+                    <img src="assets/Asset 1@3x.png" alt="Magata y Gallo" class="logo">
+
+                </a>
+                </li>
+                <li>
+                    <a href="#">Inicio</a>
+                </li>
+                <li>
+                    <a href="negocios.html">Negocios</a>
+                </li>
+                <li>
+                    <a href="coleccion.html">Coleccion</a>
+                </li>
+                <li>
+                    <a href="sobrenosotros.html">Sobre Nosotros</a>
+                </li>
             </ul>
+            <div class="icons">
+                <a href="#"><i class="fas fa-search"></i></a>
+                <a href="#"><i class="fas fa-user"></i></a>
+                <a href="#"><i class="fas fa-shopping-cart"></i></a>
+            </div>
+
         </nav>
 
     </header>
@@ -25,5 +48,78 @@
         </video>
         <div class="banner-content"></div>
     </main>
+    <section class="productos">
+        <h2>REFLEJA TU ESENCIA</h2>
+        <div class="productos-grid">
+          <!-- Producto 1 -->
+          <div class="producto">
+            <img src="assets/1.png" alt="Anillo Flor Eden Plateado">
+            <h3>Anillo Flor Ornamental en Oro con Detalles de Diamante - Colección Exclusiva LUXART </h3>
+            <p>LUXART</p>
+            <p class="precio">$110.000</p>
+            <button>Agregar al carrito</button>
+          </div>
+          <!-- Producto 2 -->
+          <div class="producto">
+            <img src="assets/aretes.png" alt="Candongas M Mostacillas Dorada">
+            <div class="etiqueta-agotado">Agotado</div>
+            <h3>Candongas Medianitas con Mostacillas Doradas</h3>
+            <p>ELEGANCE</p>
+            <p class="precio">$50.000</p>
+            <button class="agotado">Agotado</button>
+          </div>
+          <!-- Producto 3 -->
+          <div class="producto">
+            <img src="assets/aretes2.png" alt="Ear cuff y Arete Ala Renacer Dorado">
+            <h3>Ear Cuff y Arete Inspiración Dorada - GoldStyle</h3>
+            <p>GOLDSTYLE</p>
+            <p class="precio">$99.000</p>
+            <button>Agregar al carrito</button>
+          </div>
+          <!-- Producto 4 -->
+          <div class="producto">
+            <img src="assets/cadena.png" alt="Arete Tres Gotas Dorado">
+            <h3>Arete Tres Gotas Dorado – Blumart</h3>
+            <p>BLUMART</p>
+            <p class="precio">$103.000</p>
+            <button>Agregar al carrito</button>
+          </div>
+        </div>
+        <button class="ver-todo">Ver todo</button>
+      </section>
+      <div class="jewelry-grid">
+        <div class="product-card rings">
+            <img src="assets/imageni.jpg" alt="Anillos">
+            <a href="#" class="product-link">COLLARES</a>
+        </div>
+        <div class="product-card">
+            <img src="assets/imagend.jpg" alt="Aretes">
+            <a href="#" class="product-link">ANILLOS</a>
+        </div>
+        <div class="product-card">
+            <img src="assets/imagend1.jpg" alt="Collares">
+            <a href="#" class="product-link">ARETES</a>
+        </div>
+    </div>
+
+    <footer class="footer">
+      <div class="footer-logo">
+          <img src="assets/Asset 3@3x.png" alt="Logo de la Joyería">
+      </div>
+      <p>Contáctanos: mangatagallo@gmail.com</p>
+      
+      <div class="social-links">
+          <a href="#" aria-label="Facebook">
+              <i class="fab fa-facebook"></i>
+          </a>
+          <a href="#" aria-label="Instagram">
+              <i class="fab fa-instagram"></i>
+          </a>
+      </div>
+      
+      <div class="footer-bottom">
+          <p>© 2024, Mangata Gallo</p>
+      </div>
+  </footer>
 </body>
 </html>
