--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 </a>
                 </li>
                 <li>
-                    <a href="#">Inicio</a>
+                    <a href="index.html">Inicio</a>
                 </li>
                 <li>
                     <a href="negocios.html">Negocios</a>
@@ -35,7 +35,7 @@
             </ul>
             <div class="icons">
                 <a href="#"><i class="fas fa-search"></i></a>
-                <a href="#"><i class="fas fa-user"></i></a>
+                <a href="iniciar.html"><i class="fas fa-user"></i></a>
                 <a href="#"><i class="fas fa-shopping-cart"></i></a>
             </div>
 
