--- a/sobrenosotros.html
+++ b/sobrenosotros.html
@@ -35,7 +35,7 @@
             </ul>
             <div class="icons">
                 <a href="#"><i class="fas fa-search"></i></a>
-                <a href="#"><i class="fas fa-user"></i></a>
+                <a href="iniciar.html"><i class="fas fa-user"></i></a>
                 <a href="#"><i class="fas fa-shopping-cart"></i></a>
             </div>
 
